# pack-pdf

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README-cn.md  README.md  generate.bat  imgui.ini  vcpkg.json
.github/workflows/: build-windows-debug.yml  build-windows-release.yml
cmake/: SeedDirIfMissing.cmake
src/: AppMainWindow.cpp  AppMainWindow.h  Composer.cpp  Composer.h  ImageCache.cpp  ImageOptionsSelector.cpp  ImageOptionsSelector.h  PageRangeSelector.cpp  PageRangeSelector.h  Segment.h  Theme.cpp  Theme.h  UiStyle.h  main.cpp
src/App/: AppMainWindow.cpp  AppMainWindow.h  AppTheme.cpp  AppUI.h  Cli.cpp  Cli.h  main.cpp
src/File/: Composer.cpp  Composer.h  FileOptionsTypes.h  FileTypes.h  ImageCache.cpp  ImageCache.h  ImageHelpers.h  TimelineRow.h
src/Selector/: ImageOptionsSelector.cpp  ImageOptionsSelector.h  PDFPageRangeSelector.cpp  PDFPageRangeSelector.h
userdata/: config.ini
